--- a/poimage/css/style.css
+++ b/poimage/css/style.css
@@ -2,7 +2,7 @@
     font-family:'Poppins',sans-serif;
 }
 .banner{
-    background-image:url(./poimage/hanna-morris-92yWtTmQLjI-unsplash.jpg);
+    background-image:url(../poimage/hanna-morris-92yWtTmQLjI-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 200px 0;
